<resources>
    <string name="app_name">Warung Gadget</string>
    <string name="gadget_name">Nama Smartphone</string>
    <string name="description">Deskripsi</string>
    <string name="price">Harga</string>
    <string name="detail">Detail</string>
    <string name="specification">Spesifikasi</string>
    <string name="list">list\n</string>
    <string name="grid">grid</string>
    <string name="about">about</string>
    <string name="bookmark">bookmark</string>
    <string name="dummy_photos">Photos</string>
    <string name="seller">Dijual oleh</string>
    <string name="buy">Beli Sekarang</string>
    <string name="my_name">Andrian Maulana</string>
    <string name="back">back</string>
    <string name="email">andrianmaulana5612@gmail.com</string>
    <string name="about_me">ABOUT ME</string>
    <string name="share">Share</string>
    <string-array name="data_name">
        <item>Samsung Galaxy S23</item>
        <item>iPhone 15</item>
        <item>Google Pixel 8</item>
        <item>Xiaomi 14</item>
        <item>OnePlus 12</item>
        <item>Samsung Galaxy Z Fold5</item>
        <item>Samsung Galaxy Z Flip5</item>
        <item>Huawei P60</item>
        <item>Oppo Find X6</item>
        <item>Vivo X90</item>
        <item>Motorola Edge 40</item>
        <item>Nokia X30</item>
        <item>Sony Xperia 5 V</item>
        <item>Asus Zenfone 10</item>
        <item>Nothing Phone (2)</item>
        <item>Realme GT 5</item>
        <item>Poco F5</item>
        <item>Tecno Camon 20 Premier</item>
        <item>Infinix Zero Ultra</item>
        <item>Honor Magic5 Pro</item>
    </string-array>
    <string-array name="data_harga">
        <item>Rp. 15.000.000</item>
        <item>Rp. 20.000.000</item>
        <item>Rp. 12.000.000</item>
        <item>Rp. 10.000.000</item>
        <item>Rp. 13.000.000</item>
        <item>Rp. 25.000.000</item>
        <item>Rp. 18.000.000</item>
        <item>Rp. 14.000.000</item>
        <item>Rp. 16.000.000</item>
        <item>Rp. 11.000.000</item>
        <item>Rp. 9.000.000</item>
        <item>Rp. 7.000.000</item>
        <item>Rp. 17.000.000</item>
        <item>Rp. 8.000.000</item>
        <item>Rp. 12.500.000</item>
        <item>Rp. 9.500.000</item>
        <item>Rp. 6.000.000</item>
        <item>Rp. 5.000.000</item>
        <item>Rp. 8.500.000</item>
        <item>Rp. 14.500.000</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://fdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-s23-5g-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/apple/apple-iphone-15-2.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/google/google-pixel-8-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/xiaomi/xiaomi-14-01.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/oneplus/oneplus-12-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-z-fold5-5g-r2.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-z-flip5-5g-r1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/huawei/huawei-p60-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/oppo/oppo-find-x6-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/vivo/vivo-x90-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/motorola/motorola-edge40-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/nokia/nokia-x30-5g-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/sony/sony-xperia-5-v-new-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/asus/asus-zenfone10-0.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/nothing/nothing-phone2-1_.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/realme/realme-gt5-150w-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/xiaomi/xiaomi-poco-f5-2.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/tecno/tecno-camon20-premier-5g-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/infinix/infinix-zero-ultra-1.jpg</item>
        <item>https://fdn2.gsmarena.com/vv/pics/honor/honor-magic5-pro-1.jpg</item>
    </string-array>
    <string-array name="data_specification">
        <item>RAM 12GB, Internal 512GB, Snapdragon 8 Gen 2</item>
        <item>RAM 8GB, Internal 256GB, Apple A17 Bionic</item>
        <item>RAM 12GB, Internal 256GB, Google Tensor G3</item>
        <item>RAM 16GB, Internal 1TB, Snapdragon 8 Gen 2</item>
        <item>RAM 16GB, Internal 512GB, Snapdragon 8 Gen 2</item>
        <item>RAM 12GB, Internal 1TB, Snapdragon 8 Gen 2</item>
        <item>RAM 8GB, Internal 512GB, Snapdragon 8 Gen 2</item>
        <item>RAM 12GB, Internal 512GB, Kirin 9000</item>
        <item>RAM 16GB, Internal 512GB, Snapdragon 8 Gen 2</item>
        <item>RAM 12GB, Internal 256GB, Dimensity 9200</item>
        <item>RAM 8GB, Internal 256GB, Dimensity 9000</item>
        <item>RAM 8GB, Internal 256GB, Snapdragon 695</item>
        <item>RAM 12GB, Internal 256GB, Snapdragon 8 Gen 2</item>
        <item>RAM 16GB, Internal 512GB, Snapdragon 8 Gen 2</item>
        <item>RAM 12GB, Internal 256GB, Snapdragon 8+ Gen 1</item>
        <item>RAM 24GB, Internal 1TB, Snapdragon 8 Gen 2</item>
        <item>RAM 12GB, Internal 256GB, Snapdragon 8+ Gen 1</item>
        <item>RAM 16GB, Internal 512GB, Helio G99</item>
        <item>RAM 12GB, Internal 256GB, Dimensity 920</item>
        <item>RAM 12GB, Internal 512GB, Snapdragon 8 Gen 2</item>
    </string-array>
    <string-array name="link_share">
        <item>https://www.gsmarena.com/samsung_galaxy_s23-12082.php</item>
        <item>https://www.gsmarena.com/apple_iphone_15-12559.php</item>
        <item>https://www.gsmarena.com/google_pixel_8-12546.php</item>
        <item>https://www.gsmarena.com/xiaomi_14-12626.php</item>
        <item>https://www.gsmarena.com/oneplus_12-12725.php</item>
        <item>https://www.gsmarena.com/samsung_galaxy_z_fold5-12418.php</item>
        <item>https://www.gsmarena.com/samsung_galaxy_z_flip5-12252.php</item>
        <item>https://www.gsmarena.com/huawei_p60-12191.php</item>
        <item>https://www.gsmarena.com/oppo_find_x6-12106.php</item>
        <item>https://www.gsmarena.com/vivo_x90-11990.php</item>
        <item>https://www.gsmarena.com/motorola_edge_40-12204.php</item>
        <item>https://www.gsmarena.com/nokia_x30-11831.php</item>
        <item>https://www.gsmarena.com/sony_xperia_5_v-12534.php</item>
        <item>https://www.gsmarena.com/asus_zenfone_10-12380.php</item>
        <item>https://www.gsmarena.com/nothing_phone_(2)-12386.php</item>
        <item>https://www.gsmarena.com/realme_gt5-12528.php</item>
        <item>https://www.gsmarena.com/xiaomi_poco_f5-12258.php</item>
        <item>https://www.gsmarena.com/tecno_camon_20_premier-12256.php</item>
        <item>https://www.gsmarena.com/infinix_zero_ultra-11922.php</item>
        <item>https://www.gsmarena.com/honor_magic5_pro-12148.php</item>
    </string-array>
</resources>