<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/baseline_view_list_24"
        android:iconTint="@color/white"
        android:title="@string/list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_grid"
        android:icon="@drawable/baseline_grid_view_24"
        android:iconTint="@color/white"
        android:title="@string/grid"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about_page"
        android:icon="@drawable/baseline_person_24"
        android:iconTint="@color/white"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
</menu>